--- a/website/src/components/Status/styles.module.css
+++ b/website/src/components/Status/styles.module.css
@@ -11,6 +11,10 @@
   text-transform: uppercase;
 }
 
+.Status.freeFormText {
+  text-transform: none;
+}
+
 .Status.nextUp {
   color: #0092d5;
   background-color: #0092d50d;
